# blobify

./: .blobify  .gitignore  .pre-commit-config.yaml  API_REFERENCE.context  API_REFERENCE.md  BLOBIFY_FILE_GENERATION.context  LICENSE  README.md  blobify.py  pyproject.toml  requirements.txt  tasks.py  test_runner.py
.github/workflows/: test.yml
blobify/: __init__.py  config.py  console.py  content_processor.py  file_scanner.py  git_utils.py  main.py  mcp_server.py  output_formatter.py
blobify/mcp_server/: __init__.py  __main__.py  server.py
tests/: __init__.py  conftest.py  test_config.py  test_console.py  test_content_processor.py  test_context_inheritance.py  test_context_listing.py  test_dot_file_inclusion.py  test_file_scanner.py  test_filter_file_targeting.py  test_filter_functionality.py  test_git_utils.py  test_list_ignored.py  test_llm_instruction.py  test_main.py  test_mcp_integration.py  test_mcp_server.py  test_no_content_feature.py  test_output_formatter.py  test_suppress_excluded.py  test_suppress_timestamps.md  test_switch_combinations.py  test_version_consistency.py  test_version_switch.py
