[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "blobify"
version = "1.0.0"
authors = [{ name = "Alexander Parker", email = "pypi@parker.im" }]
description = "Package your entire codebase into a single text file for AI consumption"
readme = "README.md"
requires-python = ">=3.10"
dependencies = ["rich>=14.0.0"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Topic :: Software Development :: Documentation",
    "Topic :: Text Processing :: General",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Operating System :: OS Independent",
    "Environment :: Console",
]
keywords = [
    "ai",
    "code",
    "analysis",
    "codebase",
    "text",
    "file",
    "extraction",
    "git",
]

[project.optional-dependencies]
scrubbing = ["scrubadub>=2.0.1"]

[project.scripts]
bfy = "blobify.main:main"

[project.urls]
Homepage = "https://github.com/AlexanderParker/blobify"
"Bug Reports" = "https://github.com/AlexanderParker/blobify/issues"
"Source" = "https://github.com/AlexanderParker/blobify"

[tool.setuptools.packages.find]
# Automatically find packages
