[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "blobify"
version = "1.0.0"
authors = [{ name = "Alexander Parker", email = "pypi@parker.im" }]
description = "Package your entire codebase into a single text file for AI consumption"
readme = "README.md"
requires-python = ">=3.10"
dependencies = ["rich>=14.1.0"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Topic :: Software Development :: Documentation",
    "Topic :: Text Processing :: General",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Operating System :: OS Independent",
    "Environment :: Console",
]
keywords = [
    "ai",
    "code",
    "analysis",
    "codebase",
    "text",
    "file",
    "extraction",
    "git",
]

[project.optional-dependencies]
scrubbing = ["scrubadub>=2.0.1"]
dev = [
    "invoke>=2.0.0",
    "black>=25.1.0",
    "isort>=6.0.1",
    "flake8>=7.3.0",
    "Flake8-pyproject>=1.2.3",
    "flake8-bugbear>=24.12.12",
    "pep8-naming>=0.15.1",
    "pytest>=8.4.1",
    "pytest-cov>=6.2.1",
    "pre-commit>=3.0.0",
]

[project.scripts]
bfy = "blobify.main:main"

[project.urls]
Homepage = "https://github.com/AlexanderParker/blobify"
"Bug Reports" = "https://github.com/AlexanderParker/blobify/issues"
"Source" = "https://github.com/AlexanderParker/blobify"

[tool.setuptools.packages.find]
# Automatically find packages

[tool.black]
line-length = 180
target-version = ['py310']
include = '\.pyi?$'
extend-exclude = '''
/(
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
)/
'''

[tool.isort]
profile = "black"
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true
line_length = 180

[tool.pytest.ini_options]
minversion = "8.4"
addopts = "-ra -q --strict-markers --strict-config"
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
junit_family = "xunit2"
junit_suite_name = "blobify"
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks tests as integration tests",
]
filterwarnings = [
    "ignore:invalid escape sequence.*:DeprecationWarning",
    "ignore:Filth.replace_with.*:DeprecationWarning:scrubadub.*",
]

[tool.coverage.run]
source = ["blobify"]
omit = ["*/tests/*", "*/test_*", "setup.py"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "if self.debug:",
    "if settings.DEBUG",
    "raise AssertionError",
    "raise NotImplementedError",
    "if 0:",
    "if __name__ == .__main__.:",
    "class .*\\bProtocol\\):",
    "@(abc\\.)?abstractmethod",
]

[tool.flake8]
max-line-length = 180
extend-ignore = ["E203", "W503"]
